Compiler_Design/Project_2_Syntax_Analyzer/Example/calculator-example-C/CalcParser.c
/** \file
 *  This C source file was generated by $ANTLR version 3.4
 *
 *     -  From the grammar source file : Calc.g
 *     -                            On : 2012-04-30 11:28:34
 *     -                for the parser : CalcParserParser
 *
 * Editing it, at least manually, is not wise.
 *
 * C language generator and runtime by Jim Idle, jimi|hereisanat|idle|dotgoeshere|ws.
 *
 *
*/
// [The "BSD license"]
// Copyright (c) 2005-2009 Jim Idle, Temporal Wave LLC
// http://www.temporal-wave.com
// http://www.linkedin.com/in/jimidle
//
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions
// are met:
// 1. Redistributions of source code must retain the above copyright
//    notice, this list of conditions and the following disclaimer.
// 2. Redistributions in binary form must reproduce the above copyright
//    notice, this list of conditions and the following disclaimer in the
//    documentation and/or other materials provided with the distribution.
// 3. The name of the author may not be used to endorse or promote products
//    derived from this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
// IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
// OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
// IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
// INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
// NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
// THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.


/* =============================================================================
 * This is what the grammar programmer asked us to put at the top of every file.
 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>

/* End of Header action.
 * =============================================================================
 */

/* -----------------------------------------
 * Include the ANTLR3 generated header file.
 */
#include    "CalcParser.h"
/* ----------------------------------------- */





/* MACROS that hide the C interface implementations from the
 * generated code, which makes it a little more understandable to the human eye.
 * I am very much against using C pre-processor macros for function calls and bits
 * of code as you cannot see what is happening when single stepping in debuggers
 * and so on. The exception (in my book at least) is for generated code, where you are
 * not maintaining it, but may wish to read and understand it. If you single step it, you know that input()
 * hides some indirect calls, but is always referring to the input stream. This is
 * probably more readable than ctx->input->istream->input(snarfle0->blarg) and allows me to rejig
 * the runtime interfaces without changing the generated code too often, without
 * confusing the reader of the generated output, who may not wish to know the gory
 * details of the interface inheritance.
 */

#define		CTX	ctx

/* Aids in accessing scopes for grammar programmers
 */
#undef	SCOPE_TYPE
#undef	SCOPE_STACK
#undef	SCOPE_TOP
#define	SCOPE_TYPE(scope)   pCalcParser_##scope##_SCOPE
#define SCOPE_STACK(scope)  pCalcParser_##scope##Stack
#define	SCOPE_TOP(scope)    ctx->pCalcParser_##scope##Top
#define	SCOPE_SIZE(scope)		ctx->pCalcParser_##scope##Stack_limit
#define SCOPE_INSTANCE(scope, i)	(ctx->SCOPE_STACK(scope)->get(ctx->SCOPE_STACK(scope),i))

/* Macros for accessing things in the parser
 */

#undef	    PARSER
#undef	    RECOGNIZER
#undef	    HAVEPARSEDRULE
#undef		MEMOIZE
#undef	    INPUT
#undef	    STRSTREAM
#undef	    HASEXCEPTION
#undef	    EXCEPTION
#undef	    MATCHT
#undef	    MATCHANYT
#undef	    FOLLOWSTACK
#undef	    FOLLOWPUSH
#undef	    FOLLOWPOP
#undef	    PRECOVER
#undef	    PREPORTERROR
#undef	    LA
#undef	    LT
#undef	    CONSTRUCTEX
#undef	    CONSUME
#undef	    MARK
#undef	    REWIND
#undef	    REWINDLAST
#undef	    PERRORRECOVERY
#undef	    HASFAILED
#undef	    FAILEDFLAG
#undef	    RECOVERFROMMISMATCHEDSET
#undef	    RECOVERFROMMISMATCHEDELEMENT
#undef		INDEX
#undef      ADAPTOR
#undef		SEEK
#undef	    RULEMEMO
#undef		DBG

#define	    PARSER				ctx->pParser
#define	    RECOGNIZER				PARSER->rec
#define	    PSRSTATE				RECOGNIZER->state
#define	    HAVEPARSEDRULE(r)			RECOGNIZER->alreadyParsedRule(RECOGNIZER, r)
#define	    MEMOIZE(ri,si)			RECOGNIZER->memoize(RECOGNIZER, ri, si)
#define	    INPUT				PARSER->tstream
#define	    STRSTREAM				INPUT
#define	    ISTREAM				INPUT->istream
#define	    INDEX()				ISTREAM->index(INPUT->istream)
#define	    HASEXCEPTION()			(PSRSTATE->error == ANTLR3_TRUE)
#define	    EXCEPTION				PSRSTATE->exception
#define	    MATCHT(t, fs)			RECOGNIZER->match(RECOGNIZER, t, fs)
#define	    MATCHANYT()				RECOGNIZER->matchAny(RECOGNIZER)
#define	    FOLLOWSTACK				PSRSTATE->following
#ifdef  SKIP_FOLLOW_SETS
#define	    FOLLOWPUSH(x)
#define	    FOLLOWPOP()
#else
#define	    FOLLOWPUSH(x)			FOLLOWSTACK->push(FOLLOWSTACK, ((void *)(&(x))), NULL)
#define	    FOLLOWPOP()				FOLLOWSTACK->pop(FOLLOWSTACK)
#endif
#define	    PRECOVER()				RECOGNIZER->recover(RECOGNIZER)
#define	    PREPORTERROR()			RECOGNIZER->reportError(RECOGNIZER)
#define	    LA(n)				INPUT->istream->_LA(ISTREAM, n)
#define	    LT(n)				INPUT->_LT(INPUT, n)
#define	    CONSTRUCTEX()			RECOGNIZER->exConstruct(RECOGNIZER)
#define	    CONSUME()				ISTREAM->consume(ISTREAM)
#define	    MARK()				ISTREAM->mark(ISTREAM)
#define	    REWIND(m)				ISTREAM->rewind(ISTREAM, m)
#define	    REWINDLAST()			ISTREAM->rewindLast(ISTREAM)
#define	    SEEK(n)				ISTREAM->seek(ISTREAM, n)
#define	    PERRORRECOVERY			PSRSTATE->errorRecovery
#define	    FAILEDFLAG				PSRSTATE->failed
#define	    HASFAILED()				(FAILEDFLAG == ANTLR3_TRUE)
#define	    BACKTRACKING			PSRSTATE->backtracking
#define	    RECOVERFROMMISMATCHEDSET(s)		RECOGNIZER->recoverFromMismatchedSet(RECOGNIZER, s)
#define	    RECOVERFROMMISMATCHEDELEMENT(e)	RECOGNIZER->recoverFromMismatchedElement(RECOGNIZER, s)
#define     ADAPTOR                         ctx->adaptor
#define		RULEMEMO						PSRSTATE->ruleMemo
#define		DBG								RECOGNIZER->debugger


#define		TOKTEXT(tok, txt)				tok, (pANTLR3_UINT8)txt

/* The 4 tokens defined below may well clash with your own #defines or token types. If so
 * then for the present you must use different names for your defines as these are hard coded
 * in the code generator. It would be better not to use such names internally, and maybe
 * we can change this in a forthcoming release. I deliberately do not #undef these
 * here as this will at least give you a redefined error somewhere if they clash.
 */
#define	    UP	    ANTLR3_TOKEN_UP
#define	    DOWN    ANTLR3_TOKEN_DOWN
#define	    EOR	    ANTLR3_TOKEN_EOR
#define	    INVALID ANTLR3_TOKEN_INVALID


/* =============================================================================
 * Functions to create and destroy scopes. First come the rule scopes, followed
 * by the global declared scopes.
 */



/* ============================================================================= */

/* =============================================================================
 * Start of recognizer
 */


/** \brief Table of all token names in symbolic order, mainly used for
 *         error reporting.
 */
pANTLR3_UINT8   CalcParserTokenNames[10+4]
     = {
        (pANTLR3_UINT8) "<invalid>",       /* String to print to indicate an invalid token */
        (pANTLR3_UINT8) "<EOR>",
        (pANTLR3_UINT8) "<DOWN>",
        (pANTLR3_UINT8) "<UP>",
        (pANTLR3_UINT8) "ID",
        (pANTLR3_UINT8) "INT",
        (pANTLR3_UINT8) "NEWLINE",
        (pANTLR3_UINT8) "WS",
        (pANTLR3_UINT8) "'('",
        (pANTLR3_UINT8) "')'",
        (pANTLR3_UINT8) "'*'",
        (pANTLR3_UINT8) "'+'",
        (pANTLR3_UINT8) "'-'",
        (pANTLR3_UINT8) "'='"
       };



// Forward declare the locally static matching functions we have generated.
//
static 
 void
	prog    (pCalcParser ctx);
static 
 void
	state    (pCalcParser ctx);
static 
 int
	expr    (pCalcParser ctx);
static 
 int
	multExpr    (pCalcParser ctx);
static 
 int
	atom    (pCalcParser ctx);
static void	CalcParserFree(pCalcParser ctx);
static void     CalcParserReset (pCalcParser ctx);

/* For use in tree output where we are accumulating rule labels via label += ruleRef
 * we need a function that knows how to free a return scope when the list is destroyed.
 * We cannot just use ANTLR3_FREE because in debug tracking mode, this is a macro.
 */
static	void ANTLR3_CDECL freeScope(void * scope)
{
    ANTLR3_FREE(scope);
}

/** \brief Name of the grammar file that generated this code
 */
static const char fileName[] = "Calc.g";

/** \brief Return the name of the grammar file that generated this code.
 */
static const char * getGrammarFileName()
{
	return fileName;
}
/** \brief Create a new CalcParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pCalcParser
CalcParserNew   (pANTLR3_COMMON_TOKEN_STREAM instream)
{
	// See if we can create a new parser with the standard constructor
	//
	return CalcParserNewSSD(instream, NULL);
}

/** \brief Create a new CalcParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pCalcParser
CalcParserNewSSD   (pANTLR3_COMMON_TOKEN_STREAM instream, pANTLR3_RECOGNIZER_SHARED_STATE state)
{
    pCalcParser ctx;	    /* Context structure we will build and return   */

    ctx	= (pCalcParser) ANTLR3_CALLOC(1, sizeof(CalcParser));

    if	(ctx == NULL)
    {
		// Failed to allocate memory for parser context
		//
        return  NULL;
    }

    /* -------------------------------------------------------------------
     * Memory for basic structure is allocated, now to fill in
     * the base ANTLR3 structures. We initialize the function pointers
     * for the standard ANTLR3 parser function set, but upon return
     * from here, the programmer may set the pointers to provide custom
     * implementations of each function.
     *
     * We don't use the macros defined in CalcParser.h here, in order that you can get a sense
     * of what goes where.
     */

    /* Create a base parser/recognizer, using the supplied token stream
     */
    ctx->pParser	    = antlr3ParserNewStream(ANTLR3_SIZE_HINT, instream->tstream, state);
    /* Install the implementation of our CalcParser interface
     */
    ctx->prog	= prog;
    ctx->state	= state;
    ctx->expr	= expr;
    ctx->multExpr	= multExpr;
    ctx->atom	= atom;
    ctx->free			= CalcParserFree;
    ctx->reset			= CalcParserReset;
    ctx->getGrammarFileName	= getGrammarFileName;

    /* Install the scope pushing methods.
     */

    /* Install the token table
     */
    PSRSTATE->tokenNames   = CalcParserTokenNames;


    /* Return the newly built parser to the caller
     */
    return  ctx;
}

static void
CalcParserReset (pCalcParser ctx)
{
    RECOGNIZER->reset(RECOGNIZER);
}

/** Free the parser resources
 */
 static void
 CalcParserFree(pCalcParser ctx)
 {
    /* Free any scope memory
     */

	// Free this parser
	//
    ctx->pParser->free(ctx->pParser);


    ANTLR3_FREE(ctx);

    /* Everything is released, so we can return
     */
    return;
 }

/** Return token names used by this 
parser

 *
 * The returned pointer is used as an index into the token names table (using the token
 * number as the index).
 *
 * \return Pointer to first char * in the table.
 */
static pANTLR3_UINT8    *getTokenNames()
{
        return CalcParserTokenNames;
}


    /** Map variable name to Integer object holding value */
    // variable name can only have one char.
    // Access method is: HashMap[variable_name - 'A']
    int HashMap[26];


/* Declare the bitsets
 */
/** Bitset defining follow set for error recovery in rule state: FOLLOW_state_in_prog34  */
static	ANTLR3_BITWORD FOLLOW_state_in_prog34_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000172) };
static  ANTLR3_BITSET_LIST FOLLOW_state_in_prog34	= { FOLLOW_state_in_prog34_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_expr_in_state61  */
static	ANTLR3_BITWORD FOLLOW_expr_in_state61_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000040) };
static  ANTLR3_BITSET_LIST FOLLOW_expr_in_state61	= { FOLLOW_expr_in_state61_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_NEWLINE_in_state63  */
static	ANTLR3_BITWORD FOLLOW_NEWLINE_in_state63_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_NEWLINE_in_state63	= { FOLLOW_NEWLINE_in_state63_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_ID_in_state75  */
static	ANTLR3_BITWORD FOLLOW_ID_in_state75_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000002000) };
static  ANTLR3_BITSET_LIST FOLLOW_ID_in_state75	= { FOLLOW_ID_in_state75_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_13_in_state77  */
static	ANTLR3_BITWORD FOLLOW_13_in_state77_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000130) };
static  ANTLR3_BITSET_LIST FOLLOW_13_in_state77	= { FOLLOW_13_in_state77_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_expr_in_state79  */
static	ANTLR3_BITWORD FOLLOW_expr_in_state79_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000040) };
static  ANTLR3_BITSET_LIST FOLLOW_expr_in_state79	= { FOLLOW_expr_in_state79_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_NEWLINE_in_state81  */
static	ANTLR3_BITWORD FOLLOW_NEWLINE_in_state81_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_NEWLINE_in_state81	= { FOLLOW_NEWLINE_in_state81_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_NEWLINE_in_state101  */
static	ANTLR3_BITWORD FOLLOW_NEWLINE_in_state101_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_NEWLINE_in_state101	= { FOLLOW_NEWLINE_in_state101_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_multExpr_in_expr126  */
static	ANTLR3_BITWORD FOLLOW_multExpr_in_expr126_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000001802) };
static  ANTLR3_BITSET_LIST FOLLOW_multExpr_in_expr126	= { FOLLOW_multExpr_in_expr126_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_11_in_expr142  */
static	ANTLR3_BITWORD FOLLOW_11_in_expr142_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000130) };
static  ANTLR3_BITSET_LIST FOLLOW_11_in_expr142	= { FOLLOW_11_in_expr142_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_multExpr_in_expr146  */
static	ANTLR3_BITWORD FOLLOW_multExpr_in_expr146_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000001802) };
static  ANTLR3_BITSET_LIST FOLLOW_multExpr_in_expr146	= { FOLLOW_multExpr_in_expr146_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_12_in_expr162  */
static	ANTLR3_BITWORD FOLLOW_12_in_expr162_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000130) };
static  ANTLR3_BITSET_LIST FOLLOW_12_in_expr162	= { FOLLOW_12_in_expr162_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_multExpr_in_expr166  */
static	ANTLR3_BITWORD FOLLOW_multExpr_in_expr166_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000001802) };
static  ANTLR3_BITSET_LIST FOLLOW_multExpr_in_expr166	= { FOLLOW_multExpr_in_expr166_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_atom_in_multExpr204  */
static	ANTLR3_BITWORD FOLLOW_atom_in_multExpr204_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000402) };
static  ANTLR3_BITSET_LIST FOLLOW_atom_in_multExpr204	= { FOLLOW_atom_in_multExpr204_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_10_in_multExpr209  */
static	ANTLR3_BITWORD FOLLOW_10_in_multExpr209_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000130) };
static  ANTLR3_BITSET_LIST FOLLOW_10_in_multExpr209	= { FOLLOW_10_in_multExpr209_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_atom_in_multExpr213  */
static	ANTLR3_BITWORD FOLLOW_atom_in_multExpr213_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000402) };
static  ANTLR3_BITSET_LIST FOLLOW_atom_in_multExpr213	= { FOLLOW_atom_in_multExpr213_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_INT_in_atom241  */
static	ANTLR3_BITWORD FOLLOW_INT_in_atom241_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_INT_in_atom241	= { FOLLOW_INT_in_atom241_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_ID_in_atom253  */
static	ANTLR3_BITWORD FOLLOW_ID_in_atom253_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_ID_in_atom253	= { FOLLOW_ID_in_atom253_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_8_in_atom273  */
static	ANTLR3_BITWORD FOLLOW_8_in_atom273_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000130) };
static  ANTLR3_BITSET_LIST FOLLOW_8_in_atom273	= { FOLLOW_8_in_atom273_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_expr_in_atom275  */
static	ANTLR3_BITWORD FOLLOW_expr_in_atom275_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000200) };
static  ANTLR3_BITSET_LIST FOLLOW_expr_in_atom275	= { FOLLOW_expr_in_atom275_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_9_in_atom277  */
static	ANTLR3_BITWORD FOLLOW_9_in_atom277_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_9_in_atom277	= { FOLLOW_9_in_atom277_bits, 1	};


/* ==============================================
 * Parsing rules
 */
/**
 * $ANTLR start prog
 * Calc.g:20:1: prog : ( state )+ ;
 */
static void
prog(pCalcParser ctx)
{
    /* Initialize rule variables
     */

    {
        // Calc.g:20:5: ( ( state )+ )
        // Calc.g:20:9: ( state )+
        {
            // Calc.g:20:9: ( state )+
            {
                int cnt1=0;

                for (;;)
                {
                    int alt1=2;
            	switch ( LA(1) )
            	{
            	case ID:
            	case INT:
            	case NEWLINE:
            	case 8:
            		{
            			alt1=1;
            		}
            	    break;

            	}

            	switch (alt1)
            	{
            	    case 1:
            	        // Calc.g:20:9: state
            	        {
            	            FOLLOWPUSH(FOLLOW_state_in_prog34);
            	            state(ctx);

            	            FOLLOWPOP();
            	            if  (HASEXCEPTION())
            	            {
            	                goto ruleprogEx;
            	            }


            	        }
            	        break;

            	    default:

            		if ( cnt1 >= 1 )
            		{
            		    goto loop1;
            		}
            		/* mismatchedSetEx()
            		 */
            		CONSTRUCTEX();
            		EXCEPTION->type = ANTLR3_EARLY_EXIT_EXCEPTION;
            		EXCEPTION->name = (void *)ANTLR3_EARLY_EXIT_NAME;


            		goto ruleprogEx;
            	}
            	cnt1++;
                }
                loop1: ;	/* Jump to here if this rule does not match */
            }

        }

    }

    // This is where rules clean up and exit
    //
    goto ruleprogEx; /* Prevent compiler warnings */
    ruleprogEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end prog */

/**
 * $ANTLR start state
 * Calc.g:22:1: state : ( expr NEWLINE | ID '=' expr NEWLINE | NEWLINE );
 */
static void
state(pCalcParser ctx)
{
    pANTLR3_COMMON_TOKEN    ID2;
    int expr1;
    #undef	RETURN_TYPE_expr1
    #define	RETURN_TYPE_expr1 int

    int expr3;
    #undef	RETURN_TYPE_expr3
    #define	RETURN_TYPE_expr3 int

    /* Initialize rule variables
     */

    ID2       = NULL;

    {
        {
            //  Calc.g:22:6: ( expr NEWLINE | ID '=' expr NEWLINE | NEWLINE )

            ANTLR3_UINT32 alt2;

            alt2=3;

            switch ( LA(1) )
            {
            case INT:
            case 8:
            	{
            		alt2=1;
            	}
                break;
            case ID:
            	{
            		switch ( LA(2) )
            		{
            		case 13:
            			{
            				alt2=2;
            			}
            		    break;
            		case NEWLINE:
            		case 10:
            		case 11:
            		case 12:
            			{
            				alt2=1;
            			}
            		    break;

            		default:
            		    CONSTRUCTEX();
            		    EXCEPTION->type         = ANTLR3_NO_VIABLE_ALT_EXCEPTION;
            		    EXCEPTION->message      = (void *)"";
            		    EXCEPTION->decisionNum  = 2;
            		    EXCEPTION->state        = 2;


            		    goto rulestateEx;

            		}

            	}
                break;
            case NEWLINE:
            	{
            		alt2=3;
            	}
                break;

            default:
                CONSTRUCTEX();
                EXCEPTION->type         = ANTLR3_NO_VIABLE_ALT_EXCEPTION;
                EXCEPTION->message      = (void *)"";
                EXCEPTION->decisionNum  = 2;
                EXCEPTION->state        = 0;


                goto rulestateEx;

            }

            switch (alt2)
            {
        	case 1:
        	    // Calc.g:22:10: expr NEWLINE
        	    {
        	        FOLLOWPUSH(FOLLOW_expr_in_state61);
        	        expr1=expr(ctx);

        	        FOLLOWPOP();
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulestateEx;
        	        }


        	         MATCHT(NEWLINE, &FOLLOW_NEWLINE_in_state63);
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulestateEx;
        	        }


        	        {
        	             printf("%d\n", expr1
        	            );
        	        }


        	    }
        	    break;
        	case 2:
        	    // Calc.g:23:9: ID '=' expr NEWLINE
        	    {
        	        ID2 = (pANTLR3_COMMON_TOKEN) MATCHT(ID, &FOLLOW_ID_in_state75);
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulestateEx;
        	        }


        	         MATCHT(13, &FOLLOW_13_in_state77);
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulestateEx;
        	        }


        	        FOLLOWPUSH(FOLLOW_expr_in_state79);
        	        expr3=expr(ctx);

        	        FOLLOWPOP();
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulestateEx;
        	        }


        	         MATCHT(NEWLINE, &FOLLOW_NEWLINE_in_state81);
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulestateEx;
        	        }


        	        {
        	            char tmp[10];
        	                     strcpy(tmp, (char*)(ID2->getText(ID2))->chars);
        	                     HashMap[tmp[0]-'A'] = 
        	            expr3
        	            ;
        	        }


        	    }
        	    break;
        	case 3:
        	    // Calc.g:27:9: NEWLINE
        	    {
        	         MATCHT(NEWLINE, &FOLLOW_NEWLINE_in_state101);
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulestateEx;
        	        }


        	    }
        	    break;

            }
        }
    }

    // This is where rules clean up and exit
    //
    goto rulestateEx; /* Prevent compiler warnings */
    rulestateEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end state */

/**
 * $ANTLR start expr
 * Calc.g:30:1: expr returns [int value] : e= multExpr ( '+' e= multExpr | '-' e= multExpr )* ;
 */
static int
expr(pCalcParser ctx)
{
    int value;


    int e;
    #undef	RETURN_TYPE_e
    #define	RETURN_TYPE_e int

    /* Initialize rule variables
     */

    {
        // Calc.g:31:5: (e= multExpr ( '+' e= multExpr | '-' e= multExpr )* )
        // Calc.g:31:9: e= multExpr ( '+' e= multExpr | '-' e= multExpr )*
        {
            FOLLOWPUSH(FOLLOW_multExpr_in_expr126);
            e=multExpr(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto ruleexprEx;
            }


            {
                value= 
                e
                ;

            }


            // Calc.g:32:9: ( '+' e= multExpr | '-' e= multExpr )*

            for (;;)
            {
                int alt3=3;
                switch ( LA(1) )
                {
                case 11:
                	{
                		alt3=1;
                	}
                    break;
                case 12:
                	{
                		alt3=2;
                	}
                    break;

                }

                switch (alt3)
                {
            	case 1:
            	    // Calc.g:32:13: '+' e= multExpr
            	    {
            	         MATCHT(11, &FOLLOW_11_in_expr142);
            	        if  (HASEXCEPTION())
            	        {
            	            goto ruleexprEx;
            	        }


            	        FOLLOWPUSH(FOLLOW_multExpr_in_expr146);
            	        e=multExpr(ctx);

            	        FOLLOWPOP();
            	        if  (HASEXCEPTION())
            	        {
            	            goto ruleexprEx;
            	        }


            	        {
            	            value
            	             += e
            	            ;
            	        }


            	    }
            	    break;
            	case 2:
            	    // Calc.g:33:13: '-' e= multExpr
            	    {
            	         MATCHT(12, &FOLLOW_12_in_expr162);
            	        if  (HASEXCEPTION())
            	        {
            	            goto ruleexprEx;
            	        }


            	        FOLLOWPUSH(FOLLOW_multExpr_in_expr166);
            	        e=multExpr(ctx);

            	        FOLLOWPOP();
            	        if  (HASEXCEPTION())
            	        {
            	            goto ruleexprEx;
            	        }


            	        {
            	            value
            	             -= e
            	            ;
            	        }


            	    }
            	    break;

            	default:
            	    goto loop3;	/* break out of the loop */
            	    break;
                }
            }
            loop3: ; /* Jump out to here if this rule does not match */


        }

    }

    // This is where rules clean up and exit
    //
    goto ruleexprEx; /* Prevent compiler warnings */
    ruleexprEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return value;
}
/* $ANTLR end expr */

/**
 * $ANTLR start multExpr
 * Calc.g:37:1: multExpr returns [int value] : e= atom ( '*' e= atom )* ;
 */
static int
multExpr(pCalcParser ctx)
{
    int value;


    int e;
    #undef	RETURN_TYPE_e
    #define	RETURN_TYPE_e int

    /* Initialize rule variables
     */

    {
        // Calc.g:38:5: (e= atom ( '*' e= atom )* )
        // Calc.g:38:9: e= atom ( '*' e= atom )*
        {
            FOLLOWPUSH(FOLLOW_atom_in_multExpr204);
            e=atom(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto rulemultExprEx;
            }


            {
                value= 
                e
                ;

            }


            // Calc.g:38:37: ( '*' e= atom )*

            for (;;)
            {
                int alt4=2;
                switch ( LA(1) )
                {
                case 10:
                	{
                		alt4=1;
                	}
                    break;

                }

                switch (alt4)
                {
            	case 1:
            	    // Calc.g:38:38: '*' e= atom
            	    {
            	         MATCHT(10, &FOLLOW_10_in_multExpr209);
            	        if  (HASEXCEPTION())
            	        {
            	            goto rulemultExprEx;
            	        }


            	        FOLLOWPUSH(FOLLOW_atom_in_multExpr213);
            	        e=atom(ctx);

            	        FOLLOWPOP();
            	        if  (HASEXCEPTION())
            	        {
            	            goto rulemultExprEx;
            	        }


            	        {
            	            value
            	             *= e
            	            ;
            	        }


            	    }
            	    break;

            	default:
            	    goto loop4;	/* break out of the loop */
            	    break;
                }
            }
            loop4: ; /* Jump out to here if this rule does not match */


        }

    }

    // This is where rules clean up and exit
    //
    goto rulemultExprEx; /* Prevent compiler warnings */
    rulemultExprEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return value;
}
/* $ANTLR end multExpr */

/**
 * $ANTLR start atom
 * Calc.g:41:1: atom returns [int value] : ( INT | ID | '(' expr ')' );
 */
static int
atom(pCalcParser ctx)
{
    int value;


    pANTLR3_COMMON_TOKEN    INT4;
    pANTLR3_COMMON_TOKEN    ID5;
    int expr6;
    #undef	RETURN_TYPE_expr6
    #define	RETURN_TYPE_expr6 int

    /* Initialize rule variables
     */

    INT4       = NULL;
    ID5       = NULL;

    {
        {
            //  Calc.g:42:5: ( INT | ID | '(' expr ')' )

            ANTLR3_UINT32 alt5;

            alt5=3;

            switch ( LA(1) )
            {
            case INT:
            	{
            		alt5=1;
            	}
                break;
            case ID:
            	{
            		alt5=2;
            	}
                break;
            case 8:
            	{
            		alt5=3;
            	}
                break;

            default:
                CONSTRUCTEX();
                EXCEPTION->type         = ANTLR3_NO_VIABLE_ALT_EXCEPTION;
                EXCEPTION->message      = (void *)"";
                EXCEPTION->decisionNum  = 5;
                EXCEPTION->state        = 0;


                goto ruleatomEx;

            }
